# sqlxo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  flake.nix  release.sh  rust-toolchain.toml  rustfmt.toml
.cliff/: default.toml  detailed.toml
.github/workflows/: publish.yaml  release.yaml
examples/: Cargo.toml
examples/src/: openapi.rs
filter_macros/: Cargo.toml
filter_macros/src/: lib.rs  tests_runtime.rs
filter_macros/tests/: derive.rs  trybuild.rs
filter_macros/tests/try/err/: filter_duplicate_key.rs  filter_duplicate_key.stderr  filter_missing_key.stderr  filter_unknown_key.rs  filter_unknown_key.stderr  filter_wrong_form.rs  filter_wrong_form.stderr  filter_wrong_literal.rs  filter_wrong_literal.stderr  missing_fromrow.rs  missing_fromrow.stderr  not_public.rs  not_public.stderr  not_struct.rs  not_struct.stderr  unnamed_fields.rs  unnamed_fields.stderr
filter_macros/tests/try/ok/: basic.rs  default_table.rs  option_types.rs
filter_sql/: Cargo.toml
filter_sql/src/: lib.rs  repo.rs
filter_sql/tests/filter/: db.rs
filter_sql/tests/filter/helpers/: mod.rs
filter_traits/: Cargo.toml
filter_traits/src/: lib.rs
migrations/: 20251015095452_init.sql
sqlo/: Cargo.toml
sqlo/src/: builder.rs  expression.rs  head.rs  lib.rs  pagination.rs  sort.rs  tests.rs  writer.rs
sqlo/tests/filter/: db.rs
sqlo/tests/filter/helpers/: mod.rs
sqlo_macros/: Cargo.toml
sqlo_macros/src/: lib.rs
sqlo_macros/tests/: derive.rs  trybuild.rs
sqlo_macros/tests/try/err/: duplicate_key.rs  duplicate_key.stderr  missing_fromrow.rs  missing_fromrow.stderr  not_public.rs  not_struct.rs  unknown_key.rs  unknown_key.stderr  unnamed_fields.rs  wrong_form.rs  wrong_form.stderr  wrong_literal.rs  wrong_literal.stderr
sqlo_macros/tests/try/ok/: basic.rs  default_table.rs  option_types.rs
sqlo_traits/: Cargo.toml
sqlo_traits/src/: core.rs  lib.rs  web.rs
sqlxo/: Cargo.toml
sqlxo/benches/: orm.rs
sqlxo/src/: builder.rs  delete.rs  expression.rs  fts.rs  head.rs  insert.rs  lib.rs  macros.rs  read.rs  select.rs  sort.rs  tests.rs  update.rs  webfilter.rs  writer.rs
sqlxo/src/blocks/: expression.rs  head.rs  mod.rs  pagination.rs  sort.rs
sqlxo/src/web/: builder.rs  mod.rs  page.rs  webfilter.rs
sqlxo/tests/filter/: db.rs  derive.rs  main.rs  trybuild.rs
sqlxo/tests/filter/helpers/: mod.rs
sqlxo/tests/filter/try/err/: duplicate_key.stderr  missing_fromrow.stderr  not_public.stderr  not_struct.stderr  unknown_key.stderr  unnamed_fields.stderr  wrong_form.stderr  wrong_literal.stderr
sqlxo/tests/orm/: builder.rs  delete.rs  insert.rs  main.rs  update.rs
sqlxo/tests/orm/blocks/: mod.rs
sqlxo/tests/orm/db/: mod.rs
sqlxo/tests/orm/derive/: mod.rs  trybuild.rs
sqlxo/tests/orm/derive/try/err/: duplicate_key.rs  duplicate_key.stderr  missing_fromrow.rs  missing_fromrow.stderr  not_public.rs  not_public.stderr  not_struct.rs  not_struct.stderr  unknown_key.rs  unknown_key.stderr  unnamed_fields.rs  unnamed_fields.stderr  wrong_form.rs  wrong_form.stderr  wrong_literal.rs  wrong_literal.stderr
sqlxo/tests/orm/derive/try/ok/: basic.rs  default_table.rs  option_types.rs
sqlxo/tests/orm/helpers/: mod.rs
sqlxo/tests/orm/web/: mod.rs  overwrite.rs  serialize.rs
sqlxo_macros/: Cargo.toml
sqlxo_macros/src/: lib.rs
sqlxo_macros/tests/: derive.rs
sqlxo_macros/tests/try/err/: duplicate_key.stderr  missing_fromrow.rs  missing_fromrow.stderr  not_public.rs  not_public.stderr  not_struct.stderr  unknown_key.rs  unknown_key.stderr  unnamed_fields.rs  unnamed_fields.stderr  wrong_form.stderr  wrong_literal.rs  wrong_literal.stderr
sqlxo_macros/tests/try/ok/: default_table.rs  option_types.rs
sqlxo_traits/: Cargo.toml
sqlxo_traits/src/: bind.rs  core.rs  lib.rs  web.rs
