[workspace.package]
version = "0.6.3"
edition = "2021"
authors = ["Flokkq <webcla21@htl-kaindorf.at>"]
license = "MIT"
repository = "https://github.com/Flokkq/sqlxo"
readme = "README.md"
description = "sqlxo: small SQL query builder + derives for filterable ORM-ish patterns"

[workspace]
resolver = "2"
members = [
  "sqlxo_traits",
  "sqlxo_macros",
  "sqlxo",
  "examples"
]

[workspace.dependencies]
sqlxo_traits = { path = "sqlxo_traits", version = "0.6.3" }
sqlxo_macros = { path = "sqlxo_macros", version = "0.6.3" }
sqlxo = { path = "sqlxo" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4.42", features = ["serde"] }

utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }

anyhow = "1.0"
validator = { version = "0.19.0", features = ["derive"] }

tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "test-util"] }

[workspace.dependencies.sqlx]
version = "0.8.5"
default-features = true
features = [
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "chrono",
  "migrate",
  "bigdecimal",
  "any",
  "mysql",
  "postgres",
  "sqlite",
]
