[package]
name = "exampls"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
path = "src/openapi.rs" 
name = "openapi"

[dependencies]
filter_macros = { workspace = true }
filter_traits = { workspace = true }
filter_sql = { workspace = true }

sqlx = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }

chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde", "fast-rng"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "test-util"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
serde_json = "1.0.145"
