[package]
name = "exampls"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
path = "src/openapi.rs" 
name = "openapi"

[dependencies]
sqlxo_macros = { workspace = true }
sqlxo_traits = { workspace = true }
sqlxo = { workspace = true }

sqlx = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
