[package]
name = "filter_sql"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
filter_macros = { workspace = true }
filter_traits = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde", "fast-rng"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "test-util"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
serde_json = "1.0.145"

[dev-dependencies]
claims = "0.8.0"
