[package]
name = "filter_traits"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
sqlx   = { workspace = true }


serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
serde_json = "1.0.145"
