[package]
name = "sqlo_traits"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "internal: sqlo trait definitions and DTO types"
publish = false

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
