[package]
name = "sqlxo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = { workspace = true }

[features]
default = []
ignore-db-tests = []

[dependencies]
sqlxo_macros = { workspace = true }
sqlxo_traits = { workspace = true }

anyhow = { workspace = true }
validator = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
thiserror = "2.0.17"

[dev-dependencies]
claims = "0.8.0"
trybuild = "1"
insta = "1"
once_cell = "1"
uuid = "1.18.1"
