[package]
name = "sqlxo_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = { workspace = true }
repository = { workspace = true }
description = "internal: proc-macros for sqlxo"

crate-type = ["proc-macro", "rlib"]

[lib]
proc-macro = true

[features]
default          = ["infer-defaults"]
infer-defaults   = []

[dependencies]
sqlxo_traits = { workspace = true }

validator = { workspace = true }
chrono = { workspace = true }

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
heck = "0.4"
proc-macro-crate = "1"
